--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
 {
     "name": "KING-𝚂𝙿𝙰𝙼-𝙱𝙾𝚃",
     "description": "MOST POWERFUL + STABLE SPAMBOTS",
-    "logo": "https://te.legra.ph/file/2e2f78610814092d61103.jpg",
+    "logo": "https://telegra.ph/file/83a991045a98546f4d048.jpg",
     "keywords": [
         "telegram",
         "telethon",
@@ -10,9 +10,9 @@
         "deadlybot",
         "SpamBots"
     ],
-    "repository": "https://github.com/WCGKING/KINGSPAM",
-    "website": "https://t.me/BRANDED_KHUSHI",
-    "success_url": "https://t.me/BRANDED_WORLD",
+    "repository": "https://github.com/telegrambot622/AmritSpam",
+    "website": "https://t.me/Emotional_Feelings_Channel",
+    "success_url": "https://t.me/FRIENDSGROUPALLINDIA",
     "env": {
              "API_ID": {
         "description": "Fill Api ID Take this value from My.telegram.org",
