--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
     ],
     "repository": "https://github.com/telegrambot622/AmritSpam",
     "website": "https://t.me/Emotional_Feelings_Channel",
-    "success_url": "https://t.me/FRIENDSGROUPALLINDIA",
+    "success_url": "https://t.me/under_world_here",
     "env": {
              "API_ID": {
         "description": "Fill Api ID Take this value from My.telegram.org",
